Fix z-index notification area

--- a/src/Pyz/Yves/ShopUi/Theme/default/styles/settings/_z-index.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/styles/settings/_z-index.scss
@@ -4,7 +4,7 @@ $setting-zi-icon: 3;
 $setting-zi-company-menu: 10;
 $setting-zi-overlay: 700;
 $setting-zi-dropdown: 1000;
-$setting-zi-notification-area: 950;
 $setting-zi-header: 1100;
 $setting-zi-custom-select: 1150;
 $setting-zi-side-drawer: 1200;
+$setting-zi-notification-area: 1250;
